[FIX] arreglados errores iniciales. Ahora se muestran los iconos. Ruta "portada" funcionando.

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,4 +1,4 @@
 {% extends 'layout.html.twig' %}
 {% block content %}
-    <h1>¡Bienvenido a CYBERPUNk!</h1>
+    <h1>¡Bienvenido a CYBERTRAP TCG!</h1>
 {% endblock %}
