--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap.min.css') }}">
 
     <!-- FontAwesome CSS -->
-    <link rel="stylesheet" href="{{ asset('fontawesome-free-5.4.2-web/css/all.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('fontawesome-free-5.7.1-web/css/all.min.css') }}">
 
     <!-- Estilos propios de la aplicación -->
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
-    <link rel="stylesheet" href="{{ asset('main.js') }}">
-    <link rel="stylesheet" href="{{ asset('main.css') }}">
+
 
     {% block stylesheets %}{% endblock %}
 
-    <title>{% block title %}¡Bienvenido!{% endblock %}</title>
+    <title>{% block title %}CyberTrap TCG{% endblock %}</title>
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
