--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
                     <a class="nav-link" href="{{ path('portada') }}"><i class="fas fa-vihara"></i> Portada <span class="sr-only">(actual)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sección 1</a>
+                    <a class="nav-link" href="{{ path('user_list') }}"><i class="fas fa-drupal"></i>CyberLords</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Sección 2</a>
