--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -7,11 +7,12 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
+            {% set ruta = app.request.get('_route') %}
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item{% if ruta == "portada" %} active{% endif %}">
                     <a class="nav-link" href="{{ path('portada') }}"><i class="fas fa-vihara"></i> Portada <span class="sr-only">(actual)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item{% if ruta starts with "user_" %} active{% endif %}">
                     <a class="nav-link" href="{{ path('user_list') }}"><i class="fas fa-drupal"></i>CyberLords</a>
                 </li>
                 <li class="nav-item">
