--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -7,6 +7,7 @@
         <tr>
             <th>Id.</th>
             <th>NickName</th>
+            <th>Créditos</th>
             <th>¿Es admin?</th>
         </tr>
         </thead>
