--- a/web/main.css
+++ b/web/main.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: content-box !important;
+}
 body { background: url(https://image.ibb.co/bG1hBS/image.png); background-color: #000000; background-attachment: fixed; padding: 0; margin: 0; }
 
 ::-webkit-scrollbar { width: 7px; }
