Creadas rutas de testeo "main"

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,9 @@
     <!-- Estilos propios de la aplicación -->
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 
+    <link rel="stylesheet" href="{{ asset('main.css') }}">
+
+
 
     {% block stylesheets %}{% endblock %}
 
