[FIX] vista listado de usuarios: arreglado acceso a la propiedad "esAdmin"

--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -17,7 +17,7 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.nickname }}</td>
                 <td>{{ user.credits }}</td>
-                <td>{% if user.admin %}Sí{% else %}No{% endif %}</td>
+                <td>{% if user.esadmin %}Sí{% else %}No{% endif %}</td>
             </tr>
         {% endfor %}
         </tbody>
