Lisa de usuarios adaptada a los nuevos campos

--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -5,19 +5,23 @@
     <table class="table">
         <thead>
         <tr>
-            <th>Id.</th>
-            <th>NickName</th>
-            <th>Créditos</th>
-            <th>¿Es admin?</th>
+            <th class="letra_listas_cabecera">Id.</th>
+            <th class="letra_listas_cabecera">NickName</th>
+            <th class="letra_listas_cabecera">Créditos</th>
+            <th class="letra_listas_cabecera">Rep.</th>
+            <th class="letra_listas_cabecera">V/D</th>
+            <th class="letra_listas_cabecera">¿Es admin?</th>
         </tr>
         </thead>
         <tbody>
         {% for user in users %}
             <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.nickname }}</td>
-                <td>{{ user.credits }}</td>
-                <td>{% if user.esadmin %}Sí{% else %}No{% endif %}</td>
+                <td class="letra_listas">{{ user.id }}</td>
+                <td class="letra_listas">{{ user.nickname }}</td>
+                <td class="letra_listas">{{ user.credits }}</td>
+                <td class="letra_listas">{{ user.reputation }}</td>
+                <td class="letra_listas">{{ user.battleWin }} / {{ user.battlePlayed - user.battleWin }} </td>
+                <td class="letra_listas">{% if user.esadmin %}Sí{% else %}No{% endif %}</td>
             </tr>
         {% endfor %}
         </tbody>
