--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="{{ path('portada') }}"> CyberTrap TCG</a>
+        <a class="navbar-brand" href="{{ path('miMain') }}"> CyberTrap TCG</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Mostrar secciones">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,8 +15,11 @@
                 <li class="nav-item{% if ruta starts with "user_" %} active{% endif %}">
                     <a class="nav-link" href="{{ path('user_list') }}"><i class="fas fa-drupal"></i>CyberLords</a>
                 </li>
+                <li class="nav-item{% if ruta starts with "card_" %} active{% endif %}">
+                    <a class="nav-link" href="{{ path('card_list') }}"><i class="fas fa-vr-cardboard"></i>Mercado</a>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sección 2</a>
+                    <a class="nav-link" href="#">Sección X</a>
                 </li>
             </ul>
         </div>
