Creada odificación de cartas (TypeCard): Creado el formulario con las etiquetas. Creadas rutas para editar TypeCard. Creada vista para los formularios. Se puede editar un TypeCard accediendo desde el listado.

--- a/app/Resources/views/typeCard/list.html.twig
+++ b/app/Resources/views/typeCard/list.html.twig
@@ -17,7 +17,7 @@
         {% for card in cards %}
             <tr>
                 <td class="letra_listas">{{ card.id }}</td>
-                <td class="letra_listas">{{ card.name }}</td>
+                <td class="letra_listas"><a href="{{ path('card_edit', {'id':card.id}) }}">{{ card.name }}</a></td>
                 <td class="letra_listas">{{ card.atqA }}</td>
                 <td class="letra_listas">{{ card.atqB }}</td>
                 <td class="letra_listas">{{ card.atqC }}</td>
