[X] HTML Y CSS para testeo: Estructura general con todos los componentes main.css aplicado a todos los componentes

--- a/app/Resources/views/miMainPrueba.html.twig
+++ b/app/Resources/views/miMainPrueba.html.twig
@@ -9,15 +9,14 @@
 {% block content %}
     <div id="wrapper">
         <div id="control">
-            <div class="control-4">
+            <div class="control_inner">
                 <div class="control-ic-frame">
                     <div class="control-icon">
                         <div class="control-ic-cover"></div>
                     </div>
                 </div>
-                <h1>control</h1>
+                <h1>x1234567890x</h1>
                 <div class="control-links">
-                    <a href="#" style="text-transform: capitalize;"><span><i class="far fa-user fa-fw"></i></span> Jane Doe</a>
                     <div class="control-logged">
                         <a href="#"><span><i class="far fa-bell fa-fw"></i></span> 5 new alert(s)</a>
                         <a href="#"><span><i class="far fa-credit-card fa-fw"></i></span> 890 créditos</a>
@@ -59,10 +58,10 @@
 
                 <!-- banner del JUEGO-->
                 <div id="cyberpunk">
-                    <div style="background:rgba(2,11,28,0.5); width: 250px; height: 250px; padding: 50px; ">
+                    <div id="cont_title">
                         <!--        //el titulo es lo q tengo q cambiar por mis neones-->
-                        <div class="title">
-                            <h1>CyberTrap</h1>
+                        <div id="cont_title_inner" >
+                            <h1>Cyber Shogun</h1>
                             UNA DISTOPÍA CYBERPUNK
                         </div>
                     </div>
@@ -95,7 +94,7 @@
                         </div>
 
                         <div class="staff-ic-frame">
-                            <div class="staff-icon" title="staff 03" style="background:""; background-size:45px;">
+                            <div class="staff-icon" title="staff 03" style="background-size:45px;">
                             松
                         </div>
                     </div>
@@ -118,8 +117,8 @@
                     </div>
                 </div>
 
-                <div class="updates">
-                    <div id="ticker">
+                <div id="cont_updates">
+                    <div id="cont_updates_inner">
                         <ul>
                             <li><b>BETA TESTING</b> Fusce sagittis posuere odio, vel porta eros suscipit et. In tellus diam, elementum nec urna id.</li>
                             <li><b>STARTER PACK</b> Fusce sagittis posuere odio, vel porta eros suscipit et. In tellus diam, elementum nec urna id.</li>
