--- a/web/main.css
+++ b/web/main.css
@@ -1,6 +1,51 @@
+/*CLASES ESPECÍFICAS*/
 *{
   box-sizing: content-box !important;
+  font-family: "Roboto Mono";
 }
+#marcoTrabajo{
+  background: #0d0f15;
+}
+.carta{
+  padding:0.5em;
+  height: 16em;
+  width: 12em;
+  border: 0.5em solid black;
+  display:inline-block;
+}
+.carta:hover{
+  border: 0.5em outset #2ec62a;;
+}
+.carta_imagen{
+  background:black;
+  display:inline-block;
+  height: 80%;
+  width:100%;
+
+}
+.carta_ul_at{
+  display:flex;
+}
+.carta_li_at{
+  font-size: small;
+  width: 25%;
+  background: #1b1e21;
+  color: #2ec62a;
+}
+
+.letra_listas{
+color:#17a2b8;
+}
+.letra_listas:hover{
+  color:#f5286d;
+}
+.letra_listas_cabecera{
+  color:#007bff;
+}
+.
+
+/*FIN CLASES ESPECÍFICAS*/
+
 body { background: url(https://image.ibb.co/bG1hBS/image.png); background-color: #000000; background-attachment: fixed; padding: 0; margin: 0; }
 
 ::-webkit-scrollbar { width: 7px; }
@@ -30,75 +75,107 @@ a, a:hover { text-decoration: none; text-underline: none; }
 a { color: #49576d; transition: all ease 0.5s; -moz-transition: all ease 0.5s; }
 
 
-#wrapper { display: block; height: 100%;  margin: 0px auto; width: 1200px; text-align: middle; background: rgba(0,0,0,0); }
+/*ESTOS DOS ENVOLTORIOS LOS NECESITO PARA DARLE ESTRUCTURA AL ASUNTO, en realidad solo el segundo pero x si las moscas*/
+#wrapper {display: block; height: 100%;  margin: 0px auto; width: 1200px; text-align: middle; background: rgba(9,9,10,0.5); }
+#innerwrapper {width: 1000px; height: 100%; position: relative; /*left: 100px;*/  padding: 35px 100px; }
 
-#innerwrapper { width: 1000px; height: 100%; position: relative; left: 200px; padding: 35px 0px; }
+/*PANEL DEL USUARIO*/
+  #control { position: fixed;  width: 160px; height: 100%; background: rgba(19, 31, 40,0); padding: 20px; z-index: 90; }
+    /*panel intenior del usuario*/
+    .control_inner { position: relative; top: 10%/*calc(50% - 150px)*/; font-family: "Roboto Mono"; color: #f3f3f3; font-size: 8pt }
+    /*.control_inner .control-staff, .control-4 .control-logged { display: none; }*/
 
-#control { position: fixed;  width: 160px; height: 100%; background: rgba(19, 31, 40,0); padding: 20px; z-index: 90; }
+      /*TRANSPARENCIAAA*/
+      /*ESTO ES LO Q VA A HACER TRANSPARENTE>>>>*/
+      .control-ic-frame { width: 60px; height: 60px; padding: 5px; border: 2px solid #bbb; }
+       .control-icon { background: #bbb; width: 60px; height: 60px; background: url(https://image.ibb.co/hXGZQn/x7lNN.png); background-size: 60px 60px; }
+         .control-ic-cover { width: 60px; height: 60px; background: rgba(22,43,79,0.5); transition: all ease 1s; -moz-transition: all ease 1s;}
+           .control-ic-cover:hover { background: rgba(22,43,79,0.05); }
 
-.control-4 { position: relative; top: calc(50% - 150px); font-family: "Roboto Mono"; color: #f3f3f3; font-size: 8pt }
+      /*Nombre del usuario*/
+      #control h1 { font-family: "Roboto Mono"; color: #f3f3f3; margin: 0; padding: 0; text-transform: uppercase; border: 2px solid #bbb; font-weight: 400; font-size: 11pt; margin: 8px 0px; padding: 3px 10px 3px 20px; }
 
-/*.control-4 .control-staff, .control-4 .control-logged { display: none; }*/
+      /*menú del usuario*/
+      .control-links { font-size: 8pt; color: #f3f3f3; font-family: "Roboto Mono"; text-align: right; border-bottom: 2px solid #bbb; padding-bottom: 10px; }
+      .control-links a { display: block; padding: 6px 8px; color: #f3f3f3; text-transform: capitalize;}
+      .control-links a:hover { color: #496799; }
+      .control-links span { float: left; }
+      .control-staff { border-top: 2px solid #bbb; margin-top: 6px; padding-top: 7px; }
 
-.control-ic-frame { width: 60px; height: 60px; padding: 5px; border: 2px solid #bbb; }
-.control-icon { background: #bbb; width: 60px; height: 60px; background: url(https://image.ibb.co/hXGZQn/x7lNN.png); background-size: 60px 60px; }
-.control-ic-cover { width: 60px; height: 60px; background: rgba(22,43,79,0.5); transition: all ease 1s; -moz-transition: all ease 1s;}
-.control-ic-cover:hover { background: rgba(22,43,79,0.05); }
-#control h1 { font-family: "Roboto Mono"; color: #f3f3f3; margin: 0; padding: 0; text-transform: lowercase; border: 2px solid #bbb; font-weight: 400; font-size: 11pt; margin: 8px 0px; padding: 3px 10px 3px 20px; }
-.control-links { font-size: 8pt; color: #f3f3f3; font-family: "Roboto Mono"; text-align: right; border-bottom: 2px solid #bbb; padding-bottom: 10px; }
-.control-links a { display: block; padding: 6px 8px; color: #f3f3f3; }
-.control-links a:hover { color: #496799; }
-.control-links span { float: left; }
-.control-staff { border-top: 2px solid #bbb; margin-top: 6px; padding-top: 7px; }
-
+/*BLOQUE INTERIOR DEL CONTENIDO*/
 #gestaltrp { width: 1000px; background: rgba(17,21,30,0.65); }
 
-.synth { display: block; background: #10110f; padding: 10px; counter-reset: quick-links; text-align: center; }
-.synth a { color:  #4f6a7d ; font-family: "Roboto Mono"; font-size: 7pt; font-weight: 600; margin: 0px 15px; transition: all ease 0.5s; -moz-transition: all ease 0.5s; }
-/*.synth a:after { content: "_" counter(quick-links, decimal-leading-zero);	counter-increment: quick-links; }*/
-.synth a:hover { color:#f5286d; }
 
-#cyberpunk { display: table-cell; width: 250px; height: 250px; background: url(http://78.media.tumblr.com/1704bfe2f37d151ecb62a30b714f1b8a/tumblr_o0i7d582pQ1rnbw6mo1_540.gif) center bottom; background-size: 400px; }
+  /*efectos de barra de navegacion*/
+  .synth { display: block; background: #10110f; padding: 10px; counter-reset: quick-links; text-align: center; }
+  .synth a { color:  #4f6a7d ; font-family: "Roboto Mono"; font-size: 7pt; font-weight: 600; margin: 0px 15px; transition: all ease 0.5s; -moz-transition: all ease 0.5s; }
+  /*.synth a:after { content: "_" counter(quick-links, decimal-leading-zero);	counter-increment: quick-links; }*/
+  .synth a:hover { color:#f5286d; }
 
-.title { height: 246px; width: 250px; display: table-cell; text-align: center; vertical-align: middle; color: #f3f3f3; font-family: "Roboto Mono", sans-serif; font-size: 6pt; background: rgba(30,34,44,0.65); border: 2px solid #f3f3f3; letter-spacing: 3px; }
-.title h1 { text-transform: uppercase; font-size: 30pt; font-weight: 700; margin: 0; padding: 0; letter-spacing: 0px; color: #4f6a7d; font-style: italic; }
-
-#replicant { display: table-cell; vertical-align: middle; background: rgba(12, 15, 22,0.75); padding: 30px; }
-
-.synopsis { width: 220px; height: 120px; overflow-y: scroll; background-color: #171a21; border: 20px solid #171a21; font-family: "Roboto Mono"; color: #bbb; font-size: 7pt; padding-right: 10px; }
-.synopsis p { padding: 0; margin: 0; text-align: justify; line-height: 150%; }
-.synopsis p b { text-transform: uppercase; color: #4f6a7d; letter-spacing: 1px; }
-
-.weather { margin-top: 20px; width: 230px; border: 20px solid #171a21; background: url(https://78.media.tumblr.com/e5352f3a3e22d36e9d359320f1bc97a8/tumblr_mwjmcxUEoh1qztgoio1_500.gif) center; background-size: 280px; height: 60px; overflow: hidden; }
-.weather-screen { background:rgba(30,34,44,0.75); height: 60px; }
-.weather-screen b { font-family: "a-otf-midashi-mi-ma31-pr6n"; color: red; font-size: 47pt; line-height: 70px; font-weight: bold; letter-spacing: -3px; opacity:0.55;-moz-opacity:0.55; }
-.weather-tag { font-family: "Roboto Mono"; font-size:6pt; color: #f3f3f3; font-weight: 600; letter-spacing: 3px; position: relative; display: block; float: right; top: -40px; right: 10px; }
-.weather-tag b { font-size: 12pt; line-height: 12pt; color: #fff; letter-spacing: 1px; font-weight: 400; margin-left: -1px; }
-
-#automata { display: table-cell; vertical-align: middle; background: rgba(255,255,255,0); padding: 30px; width: 260px; }
-
-.staff { display: block; text-align: center; }
-.staff-ic-frame { border: 2px solid #242935; padding: 4px; width: 45px; height: 45px; display: inline-block; margin-right: 5px; }
-.staff-ic-frame:last-child { margin-right: 0px; }
-.staff-icon { font-family: "a-otf-midashi-mi-ma31-pr6n"; width: 45px; height: 45px; background: #0d0f15; background-size: 45px 45px; color: #fff; font-size: 15pt; line-height: 45px; text-shadow: 0px 0px 7px black; transition: all ease 0.5s; -moz-transition: all ease 0.3s; font-weight: bold; }
-.staff-icon:hover { text-shadow: 0px 0px 0px transparent; color: rgba(255,255,255,0); opacity: 0.35; -moz-opacity: 0.35; }
-
-.ratio { width: 260px; margin: 20px 0px; transition: all ease 1s; -moz-transition: all ease 1s; }
-.ratio h1 { font-family: "Roboto Mono"; color: #f3f3f3; margin: 0; padding: 0; text-transform: lowercase; border: 2px solid #bbb; font-weight: 400; font-size: 11pt; margin: 8px 0px; padding: 3px 20px; width: 70px; text-align: center; }
-
-.ratio-hyp, .ratio-sel, .ratio-ast, .ratio-pro, .ratio-out { box-sizing: border-box;-moz-box-sizing: border-box; -webkit-box-sizing: border-box; margin: 0px -4px 0px 0px; height: 45px; display: inline-block; transition: all ease 1s; -moz-transition: all ease 1s; opacity: 0.75; -moz-opacity: 0.75; }
-.ratio-hyp:hover, .ratio-sel:hover, .ratio-ast:hover, .ratio-pro:hover, .ratio-out:hover { transition: all ease 1s; -moz-transition: all ease 1s; opacity: 1; -moz-opacity: 1; }
-  
+/*primer bloque de contenido*/
+  #cyberpunk {
+    display: table-cell;
+    width: 250px; height: 250px;
+    background: url(http://78.media.tumblr.com/1704bfe2f37d151ecb62a30b714f1b8a/tumblr_o0i7d582pQ1rnbw6mo1_540.gif) center bottom;
+    background-size: 400px;
+  }
+    #cont_title{
+      background:rgba(2,11,28,0.5);
+      width: 250px; height: 250px;
+      padding: 50px;
+    }
+    #cont_title_inner{
+      display: table-cell;
+      height: 246px; width: 250px;
+      font-family: "Roboto Mono", sans-serif; font-size: 6pt; color: #f3f3f3;
+      text-align: center; vertical-align: middle;
+      letter-spacing: 3px;
+      background: rgba(30,34,44,0.65);
+      border: 2px solid #f3f3f3;
+    }
+    #cont_title_inner h1 {
+      text-transform: uppercase;
+      font-size: 30pt; font-weight: 700; font-style: italic; color: #4f6a7d;
+      letter-spacing: 0px;
+      margin: 0; padding: 0;
+    }
 
 
-.updates { border: 20px solid #0d0f15; background: #0d0f15; height: 40px; overflow: hidden; }
+/*2º bloque de contenido*/
+  #replicant { display: table-cell; vertical-align: middle; background: rgba(12, 15, 22,0.75); padding: 30px; }
 
-#ticker { font-family: "Roboto Mono"; font-size: 7pt; color: #bbb; height: 40px; text-align: justify; }
+    .synopsis { width: 220px; height: 120px; overflow-y: scroll; background-color: #171a21; border: 20px solid #171a21; font-family: "Roboto Mono"; color: #bbb; font-size: 7pt; padding-right: 10px; }
+    .synopsis p { padding: 0; margin: 0; text-align: justify; line-height: 150%; }
+    .synopsis p b { text-transform: uppercase; color: #4f6a7d; letter-spacing: 1px; }
 
-#ticker ul li b { color: #586c8e; }
-#ticker ul li { border-bottom: 10px solid #111419; }
+    .weather { margin-top: 20px; width: 230px; border: 20px solid #171a21; background: url(https://78.media.tumblr.com/e5352f3a3e22d36e9d359320f1bc97a8/tumblr_mwjmcxUEoh1qztgoio1_500.gif) center; background-size: 280px; height: 60px; overflow: hidden; }
+    .weather-screen { background:rgba(30,34,44,0.75); height: 60px; }
+    .weather-screen b { font-family: "a-otf-midashi-mi-ma31-pr6n"; color: red; font-size: 47pt; line-height: 70px; font-weight: bold; letter-spacing: -3px; opacity:0.55;-moz-opacity:0.55; }
+    .weather-tag { font-family: "Roboto Mono"; font-size:6pt; color: #f3f3f3; font-weight: 600; letter-spacing: 3px; position: relative; display: block; float: right; top: -40px; right: 10px; }
+    .weather-tag b { font-size: 12pt; line-height: 12pt; color: #fff; letter-spacing: 1px; font-weight: 400; margin-left: -1px; }
+
+/* 3er bloque de contenido*/
+  #automata { display: table-cell; vertical-align: middle; background: rgba(255,255,255,0); padding: 30px; width: 260px; }
+
+    .staff { display: block; text-align: center; }
+    .staff-ic-frame { border: 2px solid #242935; padding: 4px; width: 45px; height: 45px; display: inline-block; margin-right: 5px; }
+    .staff-ic-frame:last-child { margin-right: 0px; }
+    .staff-icon { font-family: "a-otf-midashi-mi-ma31-pr6n"; width: 45px; height: 45px; background: #0d0f15; background-size: 45px 45px; color: #fff; font-size: 15pt; line-height: 45px; text-shadow: 0px 0px 7px black; transition: all ease 0.5s; -moz-transition: all ease 0.3s; font-weight: bold; }
+    .staff-icon:hover { text-shadow: 0px 0px 0px transparent; color: rgba(255,255,255,0); opacity: 0.35; -moz-opacity: 0.35; }
+
+    .ratio { width: 260px; margin: 20px 0px; transition: all ease 1s; -moz-transition: all ease 1s; }
+    .ratio h1 { font-family: "Roboto Mono"; color: #f3f3f3; margin: 0; padding: 0; text-transform: lowercase; border: 2px solid #bbb; font-weight: 400; font-size: 11pt; margin: 8px 0px; padding: 3px 20px; width: 70px; text-align: center; }
+
+    .ratio-hyp, .ratio-sel, .ratio-ast, .ratio-pro, .ratio-out { box-sizing: border-box;-moz-box-sizing: border-box; -webkit-box-sizing: border-box; margin: 0px -4px 0px 0px; height: 45px; display: inline-block; transition: all ease 1s; -moz-transition: all ease 1s; opacity: 0.75; -moz-opacity: 0.75; }
+    .ratio-hyp:hover, .ratio-sel:hover, .ratio-ast:hover, .ratio-pro:hover, .ratio-out:hover { transition: all ease 1s; -moz-transition: all ease 1s; opacity: 1; -moz-opacity: 1; }
+
+
+    #cont_updates { border: 20px solid #0d0f15; background: #0d0f15; height: 40px; overflow: hidden; }
+      #cont_updates_inner { font-family: "Roboto Mono"; font-size: 7pt; color: #bbb; height: 40px; text-align: justify;
+      #cont_updates_inner ul li b { color: #586c8e; }
+      #cont_updates_inner ul li { border-bottom: 10px solid #111419; }
+
 /*
-
 .categorytitle { margin: 60px 50px; color: #f3f3f3; font-family: "Roboto Mono"; font-size: 9pt; letter-spacing: 1px; }
 .categorytitle span { padding: 3px 8px 5px 8px; border: 2px solid #bbb; }
 .categorytitle b { float: right; font-family: "Inconsolata"; font-size: 13pt; color: #969cad; }
