--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -15,17 +15,18 @@
                 <li class="nav-item{% if ruta starts with "user_" %} active{% endif %}">
                     <a class="nav-link" href="{{ path('user_list') }}"><i class="fas fa-drupal"></i>CyberLords</a>
                 </li>
-                <li class="nav-item{% if ruta starts with "card_" %} active{% endif %}">
-                    <a class="nav-link" href="{{ path('card_list') }}"><i class="fas fa-vr-cardboard"></i>Mercado</a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sección X</a>
+                    <a class="nav-link" href="#"><i class="fas fa-vr-cardboard"></i>Mercado</a>
                 </li>
+                {% if is_granted('ROLE_ADMIN') %}
+                <li class="nav-item {% if ruta starts with "card_" %} active{% endif %}">
+                    <a class="nav-link" href="{{ path('card_list') }}">Cartas</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
     <div class="container">
-        {% block content %}
-        {% endblock %}
+        {% block content %}{% endblock %}
     </div>
 {% endblock %}
