--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,8 +12,7 @@
 
     <!-- Estilos propios de la aplicación -->
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
-
-    <link rel="stylesheet" href="{{ asset('main.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/main.css') }}">
 
 
 
@@ -23,7 +22,7 @@
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
-<body>
+<body style="background: rgba(3,16,35,0.1)">
 {% block body %}{% endblock %}
 <!-- Bootstrap JS y sus dependencias (jQuery y popper.js) -->
 <script src="{{ asset('jquery/jquery-3.3.1.min.js') }}"></script>
