--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -13,20 +13,37 @@
                     <a class="nav-link" href="{{ path('portada') }}"><i class="fas fa-vihara"></i> Portada <span class="sr-only">(actual)</span></a>
                 </li>
                 <li class="nav-item{% if ruta starts with "user_" %} active{% endif %}">
-                    <a class="nav-link" href="{{ path('user_list') }}"><i class="fas fa-drupal"></i>CyberLords</a>
+                    <a class="nav-link" href="{{ path('user_list') }}"><i class="fas -jedi fa-jedi"></i>CyberLords</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fas fa-vr-cardboard"></i>Mercado</a>
-                </li>
-                {% if is_granted('ROLE_ADMIN') %}
                 <li class="nav-item {% if ruta starts with "card_" %} active{% endif %}">
-                    <a class="nav-link" href="{{ path('card_list') }}">Cartas</a>
+                    <a class="nav-link" href="{{ path('card_list') }}"><i class="fas -solar-panel fa-solar-panel"></i>Cartas</a>
                 </li>
+                {% if is_granted('ROLE_PLAYER') %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="fas fa-coins"></i>Mercado</a>
+                </li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item {% if ruta starts with "card_" %} active{% endif %}">
+                            <a class="nav-link" href="{{ path('card_list') }}">Cartas</a>
+                        </li>
+                    {% endif %}
                 {% endif %}
+
             </ul>
+            {% if app.user %}
+            <span class="navbar-light">!Hola, {{ app.user.nickname }}!  </span>
+                <a href="#" class="btn btn-outline-primary"><i class="fas fa-times"></i>EXIT</a>
+
+            {% else %}
+                <a href="{{ path('usuario_entrar') }}" class="btn btn-outline-primary"><i class="fas fa-sign-in-alt"></i> ENTRAR</a>
+            {% endif %}
         </div>
     </nav>
     <div class="container">
+        <div id="wrapper">
+
+
         {% block content %}{% endblock %}
+        </div>
     </div>
 {% endblock %}
