--- a/app/Resources/views/miMainPrueba.html.twig
+++ b/app/Resources/views/miMainPrueba.html.twig
@@ -11,7 +11,7 @@
         <div id="control">
             <div class="control_inner">
                 <div class="control-ic-frame">
-                    <div class="control-icon">
+                    <div class="control-icon")>
                         <div class="control-ic-cover"></div>
                     </div>
                 </div>
@@ -76,34 +76,32 @@
 
 
                 </div>
+
                 <!--    parte derecha del todo -->
                 <div id="automata">
-
                     <div class="staff">
-
                         <div class="staff-ic-frame">
                             <div class="staff-icon" title="staff 01" style="background:url(https://image.ibb.co/nhvNT7/shinya14_zpsf76cad9f.png); background-size:45px;">
                                 雨
                             </div>
                         </div>
-
                         <div class="staff-ic-frame">
                             <div class="staff-icon" title="staff 02" style="background:url(https://image.ibb.co/hXGZQn/x7lNN.png); background-size:45px;">
                                 塔
                             </div>
                         </div>
-
                         <div class="staff-ic-frame">
                             <div class="staff-icon" title="staff 03" style="background-size:45px;">
                             松
                         </div>
-                    </div>
 
-                    <div class="staff-ic-frame">
-                        <div class="staff-icon" title="staff 04" style="background:url(https://image.ibb.co/dM95gS/Dhgaq.png); background-size:45px;">
-                            無
-                        </div>
                     </div>
+                        <div class="staff-ic-frame">
+                            <div class="staff-icon" title="staff 04" style="background:url(https://image.ibb.co/dM95gS/Dhgaq.png); background-size:45px;">
+                                無
+                            </div>
+                        </div>
+
 
                 </div>
 
@@ -128,6 +126,10 @@
                 </div>
 
             </div>
+                /*FIN GESTALP*/
+
+
+
         </div>
     </div>
 
