--- a/app/Resources/views/typeCard/list_backup.html.twig
+++ b/app/Resources/views/typeCard/list_backup.html.twig
@@ -1,32 +1,31 @@
 {% extends './layout.html.twig' %}
 
 {% block content %}
-    <div id="marcoTrabajo">
-    <h1>Personajes</h1>
 
-    {% for card in cards %}
 
-        <div class="carta" id={{ card.id }}>
-            <img src="{{ asset('recursos/cardsImages/adonis.jpg') }}" class="carta_imagen">
-            <ul class="carta_ul_at">
-                <li class="carta_li_at">
-                    <p><i class="fas fa-atom"></i>X</p>
-                </li>
-                <li class="carta_li_at">
-                    <p><i class="fas fa-atom"></i>X</p>
-                </li>
-                <li class="carta_li_at">
-                    <p><i class="fas fa-atom"></i>X</p>
-                </li>
-                <li class="carta_li_at">
-                    <p><i class="fas fa-atom"></i>X</p>
-                </li>
-            </ul>
+
+
+
+    <div id="cont_general">
+
+        <div class="carta-cont">
+            {% for card in cards %}
+                <div class="carta-ic-marco">
+                    <div class="carta-icon"  style="background:url({{ asset('recursos/cardsImages/adonis.jpg') }}">
+                        <div class="carta-ic-cover"></div>
+                    </div>
+                </div>
+
+
+            {% endfor %}
+
         </div>
-
-
-
-    {% endfor %}
     </div>
+
+
+
+
+
+
 
 {% endblock %}
