[INICIO] nuevo aspecto para el listado de cartas -Modificada vista "list" -Eliminada vista "list_backup"

--- a/app/Resources/views/typeCard/list.html.twig
+++ b/app/Resources/views/typeCard/list.html.twig
@@ -1,29 +1,31 @@
-{% extends 'layout.html.twig' %}
+{% extends './layout.html.twig' %}
 
 {% block content %}
-    <h1>Personajes</h1>
-    <table class="table">
-        <thead>
-        <tr>
-            <th class="letra_listas_cabecera">Id.</th>
-            <th class="letra_listas_cabecera">Nombre</th>
-            <th class="letra_listas_cabecera">Ataque</th>
-            <th class="letra_listas_cabecera">Inteligencia</th>
-            <th class="letra_listas_cabecera">Armadura</th>
-            <th class="letra_listas_cabecera">Velocidad</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for card in cards %}
-            <tr>
-                <td class="letra_listas">{{ card.id }}</td>
-                <td class="letra_listas"><a href="{{ path('card_edit', {'id':card.id}) }}">{{ card.name }}</a></td>
-                <td class="letra_listas">{{ card.atqA }}</td>
-                <td class="letra_listas">{{ card.atqB }}</td>
-                <td class="letra_listas">{{ card.atqC }}</td>
-                <td class="letra_listas">{{ card.atqD }}</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+
+
+
+
+
+    <div id="cont_general">
+
+        <div class="carta-cont">
+            {% for card in cards %}
+                <div class="carta-ic-marco">
+                    <div class="carta-icon"  style="background:url({{ asset('recursos/cardsImages/adonis.jpg') }}">
+                        <div class="carta-ic-cover"></div>
+                    </div>
+                </div>
+
+
+            {% endfor %}
+
+        </div>
+    </div>
+
+
+
+
+
+
+
 {% endblock %}
